[workspace.package]
version = "1.1.2"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
homepage = "https://paradigmxyz.github.io/reth"
repository = "https://github.com/paradigmxyz/reth"
exclude = [".github/"]

[workspace]
members = [
    "bin/reth-bench/",
    "bin/reth/",
    "crates/blockchain-tree-api/",
    "crates/blockchain-tree/",
    "crates/chain-state/",
    "crates/chainspec/",
    "crates/cli/cli/",
    "crates/cli/commands/",
    "crates/cli/runner/",
    "crates/cli/util/",
    "crates/config/",
    "crates/consensus/beacon/",
    "crates/consensus/common/",
    "crates/consensus/consensus/",
    "crates/consensus/debug-client/",
    "crates/e2e-test-utils/",
    "crates/engine/invalid-block-hooks/",
    "crates/engine/local",
    "crates/engine/primitives/",
    "crates/engine/service",
    "crates/engine/tree/",
    "crates/engine/util/",
    "crates/errors/",
    "crates/ethereum-forks/",
    "crates/ethereum/cli/",
    "crates/ethereum/consensus/",
    "crates/ethereum/engine-primitives/",
    "crates/ethereum/evm",
    "crates/ethereum/node",
    "crates/ethereum/payload/",
    "crates/etl/",
    "crates/evm/",
    "crates/evm/execution-errors",
    "crates/evm/execution-types",
    "crates/exex/exex/",
    "crates/exex/test-utils/",
    "crates/exex/types/",
    "crates/metrics/",
    "crates/net/banlist/",
    "crates/net/discv4/",
    "crates/net/discv5/",
    "crates/net/dns/",
    "crates/net/downloaders/",
    "crates/net/ecies/",
    "crates/net/eth-wire-types",
    "crates/net/eth-wire/",
    "crates/net/nat/",
    "crates/net/network-api/",
    "crates/net/network-types/",
    "crates/net/network/",
    "crates/net/p2p/",
    "crates/net/peers/",
    "crates/node/api/",
    "crates/node/builder/",
    "crates/node/core/",
    "crates/node/events/",
    "crates/node/metrics",
    "crates/node/types",
    "crates/optimism/bin",
    "crates/optimism/chainspec",
    "crates/optimism/cli",
    "crates/optimism/consensus",
    "crates/optimism/evm/",
    "crates/optimism/hardforks/",
    "crates/optimism/node/",
    "crates/optimism/payload/",
    "crates/optimism/primitives/",
    "crates/optimism/rpc/",
    "crates/optimism/storage",
    "crates/payload/basic/",
    "crates/payload/builder/",
    "crates/payload/builder-primitives/",
    "crates/payload/primitives/",
    "crates/payload/validator/",
    "crates/payload/util/",
    "crates/primitives-traits/",
    "crates/primitives/",
    "crates/prune/prune",
    "crates/prune/types",
    "crates/revm/",
    "crates/rpc/ipc/",
    "crates/rpc/rpc-api/",
    "crates/rpc/rpc-builder/",
    "crates/rpc/rpc-engine-api/",
    "crates/rpc/rpc-eth-api/",
    "crates/rpc/rpc-eth-types/",
    "crates/rpc/rpc-layer",
    "crates/rpc/rpc-server-types/",
    "crates/rpc/rpc-testing-util/",
    "crates/rpc/rpc-types-compat/",
    "crates/rpc/rpc/",
    "crates/stages/api/",
    "crates/stages/stages/",
    "crates/stages/types/",
    "crates/static-file/static-file",
    "crates/static-file/types/",
    "crates/storage/codecs/",
    "crates/storage/codecs/derive/",
    "crates/storage/db-api/",
    "crates/storage/db-common",
    "crates/storage/db-models/",
    "crates/storage/db/",
    "crates/storage/errors/",
    "crates/storage/libmdbx-rs/",
    "crates/storage/libmdbx-rs/mdbx-sys/",
    "crates/storage/nippy-jar/",
    "crates/storage/provider/",
    "crates/storage/storage-api/",
    "crates/tasks/",
    "crates/tokio-util/",
    "crates/tracing/",
    "crates/transaction-pool/",
    "crates/trie/common",
    "crates/trie/db",
    "crates/trie/parallel/",
    "crates/trie/sparse",
    "crates/trie/trie",
    "examples/beacon-api-sidecar-fetcher/",
    "examples/beacon-api-sse/",
    "examples/bsc-p2p",
    "examples/custom-dev-node/",
    "examples/custom-engine-types/",
    "examples/custom-evm/",
    "examples/custom-inspector/",
    "examples/custom-node-components/",
    "examples/custom-payload-builder/",
    "examples/custom-rlpx-subprotocol",
    "examples/db-access",
    "examples/manual-p2p/",
    "examples/network-txpool/",
    "examples/network/",
    "examples/node-custom-rpc/",
    "examples/node-event-hooks/",
    "examples/polygon-p2p/",
    "examples/rpc-db/",
    "examples/stateful-precompile/",
    "examples/txpool-tracing/",
    "examples/custom-beacon-withdrawals",
    "testing/ef-tests/",
    "testing/testing-utils",
]
default-members = ["bin/reth"]
exclude = ["book/sources"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
lto = "thin"
opt-level = 3

[profile.release]
codegen-units = 16
debug = "line-tables-only"
lto = "thin"
opt-level = 3
panic = "unwind"
strip = true

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
debug = 2
inherits = "release"
strip = false

# Make sure debug symbols are in the bench profile
[profile.bench]
inherits = "profiling"

[profile.maxperf]
codegen-units = 1
inherits = "release"
lto = "fat"

[profile.reproducible]
inherits = "release"
debug = false
panic = "abort"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
# reth
op-reth = { path = "crates/optimism/bin" }
reth = { path = "bin/reth" }
reth-basic-payload-builder = { path = "crates/payload/basic" }
reth-beacon-consensus = { path = "crates/consensus/beacon" }
reth-bench = { path = "bin/reth-bench" }
reth-blockchain-tree = { path = "crates/blockchain-tree" }
reth-blockchain-tree-api = { path = "crates/blockchain-tree-api" }
reth-chain-state = { path = "crates/chain-state" }
reth-chainspec = { path = "crates/chainspec" }
reth-cli = { path = "crates/cli/cli" }
reth-cli-commands = { path = "crates/cli/commands" }
reth-cli-runner = { path = "crates/cli/runner" }
reth-cli-util = { path = "crates/cli/util" }
reth-codecs = { path = "crates/storage/codecs" }
reth-codecs-derive = { path = "crates/storage/codecs/derive" }
reth-config = { path = "crates/config" }
reth-consensus = { path = "crates/consensus/consensus", default-features = false }
reth-consensus-common = { path = "crates/consensus/common" }
reth-consensus-debug-client = { path = "crates/consensus/debug-client" }
reth-db = { path = "crates/storage/db", default-features = false }
reth-db-api = { path = "crates/storage/db-api" }
reth-db-common = { path = "crates/storage/db-common" }
reth-db-models = { path = "crates/storage/db-models" }
reth-discv4 = { path = "crates/net/discv4" }
reth-discv5 = { path = "crates/net/discv5" }
reth-dns-discovery = { path = "crates/net/dns" }
reth-downloaders = { path = "crates/net/downloaders" }
reth-e2e-test-utils = { path = "crates/e2e-test-utils" }
reth-ecies = { path = "crates/net/ecies" }
reth-engine-local = { path = "crates/engine/local" }
reth-engine-primitives = { path = "crates/engine/primitives" }
reth-engine-tree = { path = "crates/engine/tree" }
reth-engine-service = { path = "crates/engine/service" }
reth-engine-util = { path = "crates/engine/util" }
reth-errors = { path = "crates/errors" }
reth-eth-wire = { path = "crates/net/eth-wire" }
reth-eth-wire-types = { path = "crates/net/eth-wire-types" }
reth-ethereum-cli = { path = "crates/ethereum/cli" }
reth-ethereum-consensus = { path = "crates/ethereum/consensus" }
reth-ethereum-engine-primitives = { path = "crates/ethereum/engine-primitives" }
reth-ethereum-forks = { path = "crates/ethereum-forks" }
reth-ethereum-payload-builder = { path = "crates/ethereum/payload" }
reth-etl = { path = "crates/etl" }
reth-evm = { path = "crates/evm" }
reth-evm-ethereum = { path = "crates/ethereum/evm" }
reth-optimism-evm = { path = "crates/optimism/evm" }
reth-execution-errors = { path = "crates/evm/execution-errors" }
reth-execution-types = { path = "crates/evm/execution-types" }
reth-exex = { path = "crates/exex/exex" }
reth-exex-test-utils = { path = "crates/exex/test-utils" }
reth-exex-types = { path = "crates/exex/types" }
reth-fs-util = { path = "crates/fs-util" }
reth-invalid-block-hooks = { path = "crates/engine/invalid-block-hooks" }
reth-ipc = { path = "crates/rpc/ipc" }
reth-libmdbx = { path = "crates/storage/libmdbx-rs" }
reth-mdbx-sys = { path = "crates/storage/libmdbx-rs/mdbx-sys" }
reth-metrics = { path = "crates/metrics" }
reth-net-banlist = { path = "crates/net/banlist" }
reth-net-nat = { path = "crates/net/nat" }
reth-network = { path = "crates/net/network" }
reth-network-api = { path = "crates/net/network-api" }
reth-network-p2p = { path = "crates/net/p2p" }
reth-network-peers = { path = "crates/net/peers", default-features = false }
reth-network-types = { path = "crates/net/network-types" }
reth-nippy-jar = { path = "crates/storage/nippy-jar" }
reth-node-api = { path = "crates/node/api" }
reth-node-builder = { path = "crates/node/builder" }
reth-node-core = { path = "crates/node/core" }
reth-node-ethereum = { path = "crates/ethereum/node" }
reth-node-events = { path = "crates/node/events" }
reth-node-metrics = { path = "crates/node/metrics" }
reth-optimism-node = { path = "crates/optimism/node" }
reth-node-types = { path = "crates/node/types" }
reth-optimism-chainspec = { path = "crates/optimism/chainspec" }
reth-optimism-cli = { path = "crates/optimism/cli" }
reth-optimism-consensus = { path = "crates/optimism/consensus" }
reth-optimism-forks = { path = "crates/optimism/hardforks" }
reth-optimism-payload-builder = { path = "crates/optimism/payload" }
reth-optimism-primitives = { path = "crates/optimism/primitives" }
reth-optimism-rpc = { path = "crates/optimism/rpc" }
reth-optimism-storage = { path = "crates/optimism/storage" }
reth-payload-builder = { path = "crates/payload/builder" }
reth-payload-builder-primitives = { path = "crates/payload/builder-primitives" }
reth-payload-primitives = { path = "crates/payload/primitives" }
reth-payload-validator = { path = "crates/payload/validator" }
reth-payload-util = { path = "crates/payload/util" }
reth-primitives = { path = "crates/primitives", default-features = false, features = [
    "std",
] }
reth-primitives-traits = { path = "crates/primitives-traits", default-features = false }
reth-provider = { path = "crates/storage/provider" }
reth-prune = { path = "crates/prune/prune" }
reth-prune-types = { path = "crates/prune/types" }
reth-revm = { path = "crates/revm", default-features = false }
reth-rpc = { path = "crates/rpc/rpc" }
reth-rpc-api = { path = "crates/rpc/rpc-api" }
reth-rpc-api-testing-util = { path = "crates/rpc/rpc-testing-util" }
reth-rpc-builder = { path = "crates/rpc/rpc-builder" }
reth-rpc-engine-api = { path = "crates/rpc/rpc-engine-api" }
reth-rpc-eth-api = { path = "crates/rpc/rpc-eth-api" }
reth-rpc-eth-types = { path = "crates/rpc/rpc-eth-types", default-features = false }
reth-rpc-layer = { path = "crates/rpc/rpc-layer" }
reth-rpc-server-types = { path = "crates/rpc/rpc-server-types" }
reth-rpc-types-compat = { path = "crates/rpc/rpc-types-compat" }
reth-stages = { path = "crates/stages/stages" }
reth-stages-api = { path = "crates/stages/api" }
reth-stages-types = { path = "crates/stages/types" }
reth-static-file = { path = "crates/static-file/static-file" }
reth-static-file-types = { path = "crates/static-file/types" }
reth-storage-api = { path = "crates/storage/storage-api" }
reth-storage-errors = { path = "crates/storage/errors" }
reth-tasks = { path = "crates/tasks" }
reth-testing-utils = { path = "testing/testing-utils" }
reth-tokio-util = { path = "crates/tokio-util" }
reth-tracing = { path = "crates/tracing" }
reth-transaction-pool = { path = "crates/transaction-pool" }
reth-trie = { path = "crates/trie/trie" }
reth-trie-common = { path = "crates/trie/common" }
reth-trie-db = { path = "crates/trie/db" }
reth-trie-parallel = { path = "crates/trie/parallel" }

# revm
revm = { version = "18.0.0", features = ["std"], default-features = false }
revm-inspectors = "0.11.0"
revm-primitives = { version = "14.0.0", features = [
    "std",
], default-features = false }

# eth
alloy-chains = "0.1.32"
alloy-dyn-abi = "0.8.11"
alloy-primitives = { version = "0.8.11", default-features = false }
alloy-rlp = "0.3.4"
alloy-sol-types = "0.8.11"
alloy-trie = { version = "0.7", default-features = false }

alloy-consensus = { version = "0.6.4", default-features = false }
alloy-contract = { version = "0.6.4", default-features = false }
alloy-eips = { version = "0.6.4", default-features = false }
alloy-genesis = { version = "0.6.4", default-features = false }
alloy-json-rpc = { version = "0.6.4", default-features = false }
alloy-network = { version = "0.6.4", default-features = false }
alloy-network-primitives = { version = "0.6.4", default-features = false }
alloy-node-bindings = { version = "0.6.4", default-features = false }
alloy-provider = { version = "0.6.4", features = [
    "reqwest",
], default-features = false }
alloy-pubsub = { version = "0.6.4", default-features = false }
alloy-rpc-client = { version = "0.6.4", default-features = false }
alloy-rpc-types = { version = "0.6.4", features = [
    "eth",
], default-features = false }
alloy-rpc-types-admin = { version = "0.6.4", default-features = false }
alloy-rpc-types-anvil = { version = "0.6.4", default-features = false }
alloy-rpc-types-beacon = { version = "0.6.4", default-features = false }
alloy-rpc-types-debug = { version = "0.6.4", default-features = false }
alloy-rpc-types-engine = { version = "0.6.4", default-features = false }
alloy-rpc-types-eth = { version = "0.6.4", default-features = false }
alloy-rpc-types-mev = { version = "0.6.4", default-features = false }
alloy-rpc-types-trace = { version = "0.6.4", default-features = false }
alloy-rpc-types-txpool = { version = "0.6.4", default-features = false }
alloy-serde = { version = "0.6.4", default-features = false }
alloy-signer = { version = "0.6.4", default-features = false }
alloy-signer-local = { version = "0.6.4", default-features = false }
alloy-transport = { version = "0.6.4" }
alloy-transport-http = { version = "0.6.4", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ipc = { version = "0.6.4", default-features = false }
alloy-transport-ws = { version = "0.6.4", default-features = false }

# op
op-alloy-rpc-types = "0.6.5"
op-alloy-rpc-types-engine = "0.6.5"
op-alloy-network = "0.6.5"
op-alloy-consensus = "0.6.5"

# misc
aquamarine = "0.6"
auto_impl = "1"
backon = { version = "1.2", default-features = false, features = [
    "std-blocking-sleep",
    "tokio-sleep",
] }
bincode = "1.3"
bitflags = "2.4"
boyer-moore-magiclen = "0.2.16"
bytes = "1.5"
cfg-if = "1.0"
clap = "4"
const_format = { version = "0.2.32", features = ["rust_1_64"] }
dashmap = "6.0"
derive_more = { version = "1", features = ["full"] }
dyn-clone = "1.0.17"
eyre = "0.6"
fdlimit = "0.3.0"
generic-array = "0.14"
humantime = "2.1"
humantime-serde = "1.1"
itertools = "0.13"
linked_hash_set = "0.1"
modular-bitfield = "0.11.2"
notify = { version = "6.1.1", default-features = false, features = [
    "macos_fsevent",
] }
nybbles = "0.2.1"
once_cell = { version = "1.19", default-features = false, features = [
    "critical-section",
] }
parking_lot = "0.12"
paste = "1.0"
rand = "0.8.5"
rayon = "1.7"
rustc-hash = { version = "2.0", default-features = false }
schnellru = "0.2"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.94"
serde_with = "3.3.0"
sha2 = { version = "0.10", default-features = false }
shellexpand = "3.0.0"
smallvec = "1"
strum = { version = "0.26", default-features = false }
syn = "2.0"
thiserror = "1.0"
thiserror-no-std = { version = "2.0.2", default-features = false }
tracing = "0.1.0"
tracing-appender = "0.2"
url = "2.3"
zstd = "0.13"

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = { default-features = false, version = "0.18.0" }

# proc-macros
proc-macro2 = "1.0"
quote = "1.0"

# tokio
tokio = { version = "1.39", default-features = false }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }

# async
async-stream = "0.3"
async-trait = "0.1.68"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hyper = "1.3"
hyper-util = "0.1.5"
pin-project = "1.0.12"
reqwest = { version = "0.12", default-features = false }
tower = "0.4"
tower-http = "0.6"


# p2p
discv5 = "0.8.0"
if-addrs = "0.13"

# rpc
jsonrpsee = "0.24"
jsonrpsee-core = "0.24"
jsonrpsee-server = "0.24"
jsonrpsee-http-client = "0.24"
jsonrpsee-types = "0.24"

# http
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.2"
jsonwebtoken = "9"
proptest-arbitrary-interop = "0.1.0"

# crypto
enr = { version = "0.12.1", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }

# for eip-4844
c-kzg = "1.0.0"

# config
toml = "0.8"

# misc-testing
arbitrary = "1.3"
assert_matches = "1.5.0"
criterion = "0.5"
iai-callgrind = "0.13"
pprof = "0.13"
proptest = "1.4"
proptest-derive = "0.5"
serial_test = { default-features = false, version = "3" }
similar-asserts = { version = "1.5.0", features = ["serde"] }
tempfile = "3.8"
test-fuzz = "6"
rstest = "0.23.0"

tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = "0.6"
tracy-client = "0.17.3"

#[patch.crates-io]
#alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types-admin = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types-mev = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }
#alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "a971b3a" }

#op-alloy-rpc-types = { git = "https://github.com/alloy-rs/op-alloy", rev = "6a042e7681b1" }
#op-alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/op-alloy", rev = "6a042e7681b1" }
#op-alloy-network = { git = "https://github.com/alloy-rs/op-alloy", rev = "6a042e7681b1" }
#op-alloy-consensus = { git = "https://github.com/alloy-rs/op-alloy", rev = "6a042e7681b1" }
